# claude-bot

./: CMakeLists.txt  README.md  config.json  package.xml  rover.txt
launch/: wave_rover.launch
src/: area_recognition.py  gpio_controller.py  lidar_integration.py  mapping.py  navigation.py  wave_rover_controller.py
src/utils/: helper.py
