<package format="2">
  <name>wave_rover_ros</name>
  <version>0.1.0</version>
  <description>The ROS package for controlling the WAVE ROVER robot with LiDAR integration for mapping and navigation.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>